samples/_failures_safe/1761275906_08ac1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9208508c.c: In function ‘pointcloud_free’:
./samples/SAFE/__tmp_9208508c.c:122:5: error: expected declaration or statement at end of input
  122 |     pc->count = 0;
      |     ^~
